--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -11,7 +11,7 @@
               bottom: 0;
               width: 100%;
               background-color:#343a40;
-              color: red;
+              color: white;
               text-align: center;
             }
           </style>
