--- a/views/pages/order.ejs
+++ b/views/pages/order.ejs
@@ -26,21 +26,38 @@
                         </thead>
                         <tbody>
                     
+                            <form action="/payment" method="GET">
+                                <%Object.keys(itemlist).forEach(function(item) { %>
+                                    <tr style="vertical-align:middle;align-items: center ;">
+                                        <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].id%></td>
+                                        <input style="display: none" type="text" name="id" value="<%=itemlist[item].id%>">
+                                        <td>    
+                                            <img class="card-img-top center" style="max-width:60px;max-height:60px;" src="/images/<%=itemlist[item].id%>.jpg" alt="Card image cap">
+                                        </td>
+                                        <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].name%></td>
+                                        <input style="display: none" type="text" name="name" value="<%=itemlist[item].name%>">
+                                        <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].number%></td>
+                                        <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].price%></td>
+                                        <td> </td>
+                
+                                       
+                                    </tr>                   
+                                <% }); %>
+                                <button type="submit">ThanhToán</button>
+                                
+<div>
+  <input type="checkbox" id="02" name="02"
+         >
+  <label for="02">02</label>
+</div>
 
-                        <%Object.keys(itemlist).forEach(function(item) { %>
-                            <tr style="vertical-align:middle;align-items: center ;">
-                                <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].id%></td>
-                                <td> 
-                                    <img class="card-img-top center" style="max-width:60px;max-height:60px;" src="/images/<%=itemlist[item].id%>.jpg" alt="Card image cap">
-                                </td>
-                                <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].name%></td>
-                                <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].number%></td>
-                                <td style="vertical-align:middle;align-items: center ;"><%=itemlist[item].price%></td>
-                                <td> </td>
-        
-                               
-                            </tr>                   
-                        <% }); %>
+<div>
+  <input type="checkbox" id="03" name="03">
+  <label for="03">03</label>
+</div>
+
+                            </form>
+                       
                         </tbody>
                     </table>
                 </div>
