--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -12,7 +12,7 @@
         <main>
             <div class="container" >
                 <div style="text-align: center;"  >
-                    <img src="/images/Logo-Greenwich.png" />
+                    <img src="/images/images.png" />
             
                     <audio controls autoplay loop hidden="true">
                         <source src="/AnhKhongThaThu-DinhDung-6684271.mp3"  type="audio/mpeg">          
